fixed variable names casing and naming, stylings and extracting of handlers funtions and wrapping them in useCallback for persisting avoiding reconstructions

--- a/src/print-prescription/print-prescription.scss
+++ b/src/print-prescription/print-prescription.scss
@@ -18,7 +18,7 @@
 .printOutContainer {
   background-color: colors.$gray-20;
   padding: layout.$spacing-05;
-  width: 320px;
+  width: 20rem;
 }
 
 .printoutTitle {
